fix body overflow scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body{
     /* background-color: #6976bc; */
     background-color: rgb(42,48,74);
     touch-action: pan-x pan-y;
+    overflow: hidden;
 }
 
 main{
